--- a/contact_us.html
+++ b/contact_us.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html><title>Contact Us</title>
+<html><title>Contact Me</title>
+
+<head>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
 <body>
 
     <head>
-        <div style="background-color: rgb(255, 255, 255);">
+        <div style="background-color: rgb(133, 133, 133);">
             <table style="width: 100%;">
                 <tr>
                     <td>
                         <a href="index.html">
-                            <img src="assets/Logo/S Company.jpg" width="100px" alt="">
+                            <img src="./assets/Icons/phone.png" width="100px" alt="">
                         </a>
 
                     </td>
@@ -26,8 +30,8 @@
 
     </head>
 
-    <main style="height: 119vh; background-color: rgb(168, 168, 168);">
-        <img src="./assets/Images/internship.jpg" style="width: 100%;" alt="style="padding-left: 50vh; padding-top: 50px>
+    <main style="height: 119vh; background-color: rgb(255, 255, 255);">
+        <img src="./assets/Images/room.jpg" style="width: 100%;" alt="style="padding-left: 50vh; padding-top: 50px>
         <div class="container">
             <form action="action_page.php">
           
