--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <title>Lebogang's Web Portfolio</title>
+<head>
+    <style>
+        p {
+            background-color: rgb(97, 221, 169);
+            color: rgb(51, 49, 49);
+        }
+    </style>
+</head>
 
 <body>
 
@@ -29,13 +37,15 @@
 
     </head>
 
-    <!--This is our main it will encompass all our content for the landing page for our site -->
+    <!--This is our main it will encompass all our content for the landing page for our site and i need to work on this at home and input a video -->
     <main style="height: 100vh; background-color: rgb(167, 167, 167);">
         <table style="width: 100%; height: 100px;">
             <tr>
                 <td colspan="2">
-                    <img src="../My HTML Project/assets/Images/Evo.jpg" width="100%" height="670px" alt=""
-                        style="object-fit: cover;">
+
+                    <video width="1885" height="720" controls>
+                      <source src="./assets/Videos/Rorisang.mp4">  
+                    </video>
                 </td>
             </tr>
             <tr>
@@ -74,7 +84,7 @@
                 <td style="padding-left: 20vh;"><script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-                    <a href="https://twitter.com/@SelekeSylvester"><ion-icon name="logo-twitter"></ion-icon>
+                    <a href="https://twitter.com/@SelekeSylvester"><ion-icon name="logo-twitter"></ion-icon></a>
                     <a href="https://facebook.com/lebogangsylvesterseleke"><ion-icon name="logo-facebook"></ion-icon></a>
                 </td>    
                 
